# libbitter

./: .travis.yml  README.md  appveyor.yml
documentation/: Doxyfile
include/: bitter_bit.hpp  bitter_read.hpp  bitter_readwrite.hpp  bitter_variable_unsigned_integer.hpp  bitter_write.hpp
test/: CMakeLists.txt
test/source/: test_bitter_main.cpp  test_bitter_read.cpp  test_bitter_readwrite.cpp  test_bitter_variable_unsigned_integer.cpp  test_bitter_write.cpp
